--- a/src/app/property/property.component.css
+++ b/src/app/property/property.component.css
@@ -4,3 +4,10 @@
     font-size: 26px;
     font-weight: 300;
 }
+.card, .card-footer {
+    background-color: inherit;
+    border: none;
+}
+.card-block {
+    padding: 1.25rem;
+}
