--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -3,11 +3,19 @@
 		<h5 class="card-title">{{property.Name}}</h5>
 		<table class="table table-bordered">
 			<tr>
-				<td>Name</td>
-				<td>{{property.Name}}</td>
-			</tr>
-			<tr>
 				<td>Description</td>
+				<td>{{property.Description}}</td>
+			</tr>
+      <tr>
+				<td>No. of Living Room</td>
+				<td>{{property.Description}}</td>
+			</tr>
+      <tr>
+				<td>No. of Bed Room</td>
+				<td>{{property.Description}}</td>
+			</tr>
+      <tr>
+				<td>No. of Floor</td>
 				<td>{{property.Description}}</td>
 			</tr>
 		</table>
