--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -8,15 +8,19 @@
 			</tr>
       <tr>
 				<td>No. of Living Room</td>
-				<td>{{property.Description}}</td>
+				<td>{{property.No_Of_LivingRooms}}</td>
 			</tr>
       <tr>
 				<td>No. of Bed Room</td>
-				<td>{{property.Description}}</td>
+				<td>{{property.No_Of_BedRooms}}</td>
 			</tr>
       <tr>
-				<td>No. of Floor</td>
-				<td>{{property.Description}}</td>
+				<td>No. of Floors</td>
+				<td>{{property.No_Of_Floors}}</td>
+			</tr>
+      <tr>
+				<td>Available for</td>
+				<td>{{property.Property_Purpose}}</td>
 			</tr>
 		</table>
 	</div>
