--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -20,7 +20,7 @@
 			</tr>
       <tr>
 				<td>Available for</td>
-				<td>{{property.Property_Purpose}}</td>
+				<td>{{property.Property_Purpose.Name}}</td>
 			</tr>
 		</table>
 	</div>
