--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,6 +4,11 @@
     font-size: 26px;
     font-weight: 300;
 }
+ .card-subtitle {
+    padding-bottom: 10px;
+    font-size: 18px;
+    font-weight: 300;
+}
 .card, .card-footer {
     background-color: inherit;
     border: none;
