--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -4,6 +4,7 @@
 				class="float-right btn btn-outline-primary" [routerLink]="['/registerproperty',property.ID]">Edit</a>
 		</h5>
 		<p class="card-text">{{property.Description}}</p>
+		<p class="card-text">{{property.Address}}</p>
 		<table class="table table-bordered">
 			<tr>
 				<td>No. of Living Room</td>
