--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -1,6 +1,9 @@
 <div class="card mb-4">
 	<div class="card-body">
-		<h5 class="card-title">{{property.Name}}<a *ngIf="currentuser == property.UserCreatedBy"
+		<h5 class="card-title">{{property.Name}}
+      <a *ngIf="currentuser == property.UserCreatedBy"
+				class="float-right btn btn-outline-primary" [routerLink]="['/registerproperty',property.ID]">L</a>
+      <a *ngIf="currentuser == property.UserCreatedBy"
 				class="float-right btn btn-outline-primary" [routerLink]="['/registerproperty',property.ID]">Edit</a>
 		</h5>
 		<p class="card-text">{{property.Description}}</p>
