--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -2,7 +2,7 @@
 	<div class="card-body">
 		<h5 class="card-title">{{property.Name}}
 			<a class="float-right btn btn-outline-primary ml-2"
-				[routerLink]="['/registerproperty',property.ID]">Like</a>
+				[routerLink]="['/registerproperty',property.ID]" (click)="">Like</a>
 			<a *ngIf="currentuser == property.UserCreatedBy" class="float-right btn btn-outline-primary"
 				[routerLink]="['/registerproperty',property.ID]">Edit</a>
 		</h5>
