--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
 			<div class="card mb-2">
 				<div class="card-body">
 					<h5 class="card-title">Favourite Property</h5>
-					<app-property *ngFor="let property of properties" [property]="property"
+					<app-property *ngFor="let property of favouriteproperties" [property]="property"
 						[currentuser]="currentLoggedInUser">
 					</app-property>
 					<div class="card" *ngIf="properties.length == 0">
