--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-4">
+<div class="card mb-4 animated fadeInUp" style="animation-delay: {{animationDelay}}s;">
 	<div class="card-body">
 		<h5 class="card-title">{{property.Name}}
 			<a *ngIf="currentuser == property.UserCreatedBy" class="float-right btn btn-outline-primary ml-2"
