--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,8 @@
 <div class="row">
+  <div class="col">
+  </div>
 	<div class="col">
-		<div class="card w-50 ml-50 mr-50 mt-4 mb-4">
+		<div class="card mt-4 mb-4">
 			<article class="card-body">
 				<a routerLink="/register" class="float-right btn btn-outline-primary">Sign up</a>
 				<h4 class="card-title mb-4 mt-1">Sign in</h4>
@@ -29,4 +31,6 @@
 			</article>
 		</div>
 	</div>
+  <div class="col">
+  </div>
 </div>
