--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -3,7 +3,7 @@
 		<div class="col mb-2 ml-2">
 			<div class="card">
 				<div class="card-body">
-					<h5 class="card-title">Monthly Property Data</h5>
+					<h5 class="card-title">Property Purpose</h5>
 					<div id="chartContainer" class="w-100" style="height: 300px;"></div>
 				</div>
 			</div>
@@ -11,7 +11,7 @@
 		<div class="col mb-2">
 			<div class="card">
 				<div class="card-body">
-					<h5 class="card-title">Monthly Property Data</h5>
+					<h5 class="card-title">Property Types</h5>
 					<div id="chartContainer1" class="w-100" style="height: 300px;"></div>
 				</div>
 			</div>
@@ -22,6 +22,14 @@
 				<div class="card-body">
 					<h5 class="card-title">Monthly Property Data</h5>
 					<div id="users-state-bar-chart" class="w-100" style="height: 300px;"></div>
+				</div>
+			</div>
+		</div>
+    <div class="col mb-2">
+			<div class="card">
+				<div class="card-body">
+					<h5 class="card-title">Property S</h5>
+					<div id="chartContainer3" class="w-100" style="height: 300px;"></div>
 				</div>
 			</div>
 		</div>
