--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -28,7 +28,7 @@
     <div class="col mb-2">
 			<div class="card">
 				<div class="card-body">
-					<h5 class="card-title">Property S</h5>
+					<h5 class="card-title">Property Status</h5>
 					<div id="chartContainer3" class="w-100" style="height: 300px;"></div>
 				</div>
 			</div>
