--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -19,21 +19,21 @@
 								<div *ngIf="f.Description.errors.required">Description is required</div>
 							</div>
 						</div>
-            <div class="form-group">
+						<div class="form-group">
 							<label for="Description">Address</label>
 							<input type="text" formControlName="Address" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Address.errors }" />
 							<div *ngIf="submitted && f.Address.errors" class="invalid-feedback">
 								<div *ngIf="f.Address.errors.required">Address is required</div>
 							</div>
 						</div>
-            <div class="form-group">
+						<div class="form-group">
 							<label for="No_Of_BedRooms">Area Sq Foot</label>
 							<input type="number" formControlName="AreaSqFt" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.AreaSqFt.errors }" />
 							<div *ngIf="submitted && f.AreaSqFt.errors" class="invalid-feedback">
 								<div *ngIf="f.AreaSqFt.errors.required">Area Sq Foot is required</div>
 							</div>
 						</div>
-            <div class="form-group">
+						<div class="form-group">
 							<label for="No_Of_BedRooms">No. of Living Rooms</label>
 							<input type="number" formControlName="No_Of_LivingRooms" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_LivingRooms.errors }" />
 							<div *ngIf="submitted && f.No_Of_LivingRooms.errors" class="invalid-feedback">
@@ -111,7 +111,7 @@
 								<div *ngIf="f.Property_Status.errors.required">Property Status is required</div>
 							</div>
 						</div>
-            <div class="form-group">
+						<div class="form-group">
 							<label for="Property_Status">Property Purpose</label>
 							<select formControlName="Property_Purpose" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Property_Purpose.errors }">
                <option *ngFor="let purpose of propertypurpose" value={{purpose.ID}}>{{purpose.Name}}</option>
@@ -121,7 +121,7 @@
 								<div *ngIf="f.Property_Purpose.errors.required">Property Purpose is required</div>
 							</div>
 						</div>
-            <div class="form-group">
+						<div class="form-group">
 							<label for="No_Of_BedRooms">Price</label>
 							<input type="number" formControlName="Price" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Price.errors }" />
 							<div *ngIf="submitted && f.Price.errors" class="invalid-feedback">
@@ -132,6 +132,10 @@
 							<button [disabled]="loading" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Submit
+        </button>
+							<button [disabled]="loading" class="btn btn-primary" (click)=" predictPrice()" type="button">
+            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+            Predict Price
         </button>
 							<a routerLink="/home" class="btn btn-link">Cancel</a>
 						</div>
