--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -127,17 +127,16 @@
 							<div *ngIf="submitted && f.Price.errors" class="invalid-feedback">
 								<div *ngIf="f.Price.errors.required">Price is required</div>
 							</div>
-							<button [disabled]="loading" class="btn btn-primary" (click)=" predictPrice()" type="button">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-            Predict Price
-        </button>
 						</div>
 						<div class="form-group">
 							<button [disabled]="loading" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Submit
         </button>
-
+        <button [disabled]="loading" class="btn btn-primary">
+            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+            Submit
+        </button>
 							<a routerLink="/home" class="btn btn-link">Cancel</a>
 						</div>
 					</form>
