--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -24,6 +24,9 @@
 					<li class="nav-item">
 						<a class="nav-link" routerLink="/management">Management</a>
 					</li>
+          <li class="nav-item">
+						<a class="nav-link" routerLink="/predictor">Try Price Prediction</a>
+					</li>
 					<li class="nav-item">
 						<a class="nav-link"
 							routerLink="/dashboard"><span class="badge badge-primary mr-2">{{currentLoggedInUser}}</span></a>
