--- a/src/app/predictor/predictor.component.html
+++ b/src/app/predictor/predictor.component.html
@@ -44,6 +44,6 @@
 				</div>
 			</div>
 		</div>
-    <div class="col"{{pricepredicted}}></div>
+    <div class="col">{{pricepredicted}}</div>
 	</div>
 </div>
