--- a/src/app/predictor/predictor.component.html
+++ b/src/app/predictor/predictor.component.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col">
 			<div class="card mt-4">
-				<div class="card-header bg-danger text-white">Predict Price</div>
+				<div class="card-header bg-info text-white">Predict Price</div>
 				<div class="card-body">
 					<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
 						<div class="form-group">
