--- a/src/app/predictor/predictor.component.html
+++ b/src/app/predictor/predictor.component.html
@@ -34,7 +34,7 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<button [disabled]="loading" class="btn btn-primary">
+							<button [disabled]="!registerForm.valid" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Submit
         </button>
@@ -44,6 +44,11 @@
 				</div>
 			</div>
 		</div>
-    <div class="col">{{pricepredicted}}</div>
+		<div class="col">{{pricepredicted}}
+			<pre>{{registerForm.get('AreaSqFt').valid}}</pre>
+			<pre>{{registerForm.get('No_Of_LivingRooms').valid}}</pre>
+			<pre>{{registerForm.get('No_Of_BedRooms').valid}}</pre>
+			<pre>{{registerForm.get('No_Of_BathRooms').valid}}</pre>
+		</div>
 	</div>
 </div>
