--- a/src/app/predictor/predictor.component.html
+++ b/src/app/predictor/predictor.component.html
@@ -44,11 +44,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="col">{{pricepredicted}}
-			<pre>{{predictorForm.get('AreaSqFt').valid}}</pre>
-			<pre>{{predictorForm.get('No_Of_LivingRooms').valid}}</pre>
-			<pre>{{predictorForm.get('No_Of_BedRooms').valid}}</pre>
-			<pre>{{predictorForm.get('No_Of_BathRooms').valid}}</pre>
+		<div class="col">
+			
 		</div>
 	</div>
 </div>
