--- a/src/app/predictor/predictor.component.html
+++ b/src/app/predictor/predictor.component.html
@@ -45,7 +45,12 @@
 			</div>
 		</div>
 		<div class="col">
-			{{pricepredicted}}
+			<div class="card mt-4">
+				<div class="card-header bg-info text-white">Predict Price</div>
+				<div class="card-body">
+					{{pricepredicted}}
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
