--- a/src/app/predictor/predictor.component.html
+++ b/src/app/predictor/predictor.component.html
@@ -48,7 +48,7 @@
 			<div class="card mt-4">
 				<div class="card-header bg-info text-white">Predict Price</div>
 				<div class="card-body">
-					{{pricepredicted}}
+				 <h3> &#8377; {{pricepredicted}}  </h3>
 				</div>
 			</div>
 		</div>
