--- a/src/app/propertydetails/propertydetails.component.html
+++ b/src/app/propertydetails/propertydetails.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-4 animated fadeInUp" style="animation-delay: {{animationDelay}}s;">
+<div class="card m-4 animated fadeInUp" style="animation-delay: {{animationDelay}}s;">
 	<div class="card-body">
 		<h5 class="card-title">{{property.Name}}
 		</h5>
