--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,7 +61,7 @@
 							<div class="custom-control custom-checkbox" *ngFor="let state of states">
 								<span class="float-right badge badge-light round">52</span>
 								<input type="checkbox" class="custom-control-input" [id]="state.Name" (change)="toggleVisibility($event,state.State_ID,'State')" />
-								<label class="custom-control-label" [for]="state.State_ID">{{state.Name}}</label>
+								<label class="custom-control-label" [for]="state.Name">{{state.Name}}</label>
 							</div> <!-- form-check.// -->
 						</div> <!-- card-body.// -->
 					</div>
