--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -98,7 +98,6 @@
 					<div class="filter-content">
 						<div class="card-body">
 							<div class="custom-control custom-checkbox" *ngFor="let status of propertystatus">
-								
 								<input type="checkbox" class="custom-control-input" [id]="status.Name" (change)="toggleVisibility($event,status.ID,'Property_Status')" />
 								<label class="custom-control-label" [for]="status.Name">{{status.Name}}</label>
 							</div> <!-- form-check.// -->
@@ -110,19 +109,23 @@
 		<div class="col-sm-8">
 			<div class="card mb-2">
 				<div class="card-body">
-					<form class="form-inline " [formGroup]="searchform" (ngSubmit)="onSubmit()">
-						<div class="form-group form-group-sm">
+					<form [formGroup]="searchform" (ngSubmit)="onSubmit()">
+						<div class="row">
 							<div class="col-sm-8">
-								<input type="text" formControlName="search" class="form-control " [ngClass]="{ 'is-invalid': submitted && f.search.errors }" />
-								<div *ngIf="submitted && f.search.errors" class="invalid-feedback">
-									<div *ngIf="f.search.errors.required">Text is required</div>
+								<div class="form-group form-group-sm">
+									<input type="text" formControlName="search" class="form-control " [ngClass]="{ 'is-invalid': submitted && f.search.errors }" />
+									<div *ngIf="submitted && f.search.errors" class="invalid-feedback">
+										<div *ngIf="f.search.errors.required">Text is required</div>
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="form-group">
-							<button [disabled]="loading" class="btn btn-primary">Search
+							<div class="col-sm-2">
+								<div class="form-group form-group-sm">
+									<button [disabled]="loading" class="btn btn-primary">Search
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
         </button>
+								</div>
+							</div>
 						</div>
 					</form>
 				</div>
